--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "axios": "1.7.4",
+    "axios": "^1.8.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
@@ -50,7 +50,7 @@
     "@typescript-eslint/parser": "^4.14.2",
     "browserify": "^17.0.0",
     "eslint": "^7.19.0",
-    "esmify": "^2.1.1",
+    "esmify": "^0.1.2",
     "nodemon": "^2.0.7",
     "tinyify": "^3.0.0",
     "ts-node": "^9.1.1",
